--- a/web/themes/oc_patterns/components/_patterns/00-base/global/04-mixins/mixins.twig
+++ b/web/themes/oc_patterns/components/_patterns/00-base/global/04-mixins/mixins.twig
@@ -32,7 +32,7 @@
 <div class="mixin-tile">
 	<ul>
 		<li><strong>Max Width</strong></li>
-		<li class="include-tag">@include maxWidth{}</li>
+		<li class="include-tag">@include contentStop{}</li>
 		<li>Creates a breakpoint at 1200px</li>
 	</ul>
 </div>
