--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/block-placer/_block-placer.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/block-placer/_block-placer.scss
@@ -4,7 +4,7 @@
 .paragraph--type--block-placer{
 	.field-block{
 		.field.body{
-			max-width: $maxWidthText;
+			max-width: $textMax;
 			@include auto;
 		}
 	}
