--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/call-to-action/_call_to_action.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/call-to-action/_call_to_action.scss
@@ -3,7 +3,7 @@
 =============== */
 
 .paragraph--type--call-to-action{
-	max-width: $maxWidthText;
+	max-width: $textMax;
 	@include auto;
 	
 	.widget-title{
