--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/form/_form.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/form/_form.scss
@@ -3,7 +3,7 @@
 ================ */
 
 .paragraph--type--form{
-	max-width: $maxWidthText;
+	max-width: $textMax;
 	@include auto;
 	form{
 		& > .js-form-item{
