--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/lightbox/_lightbox.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/lightbox/_lightbox.scss
@@ -105,7 +105,7 @@
 		}
 
 		.gallery-text{
-			max-width: $maxWidthText;
+			max-width: $textMax;
 			padding: 2em 3em;
 		}
 	}//end featherlight content
