--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/links-files/_links-files.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/links-files/_links-files.scss
@@ -3,7 +3,7 @@
 ================== */
 
 .paragraph--type--links-files{
-	max-width: $maxWidthText;
+	max-width: $textMax;
 	@include auto;
 	//set margins for links and files lists
 	.links-files{
