--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/map/_map.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/map/_map.scss
@@ -5,7 +5,7 @@
 .paragraph--type--map{
 	//override default text width wrapper sizing
 	.wrapper{
-		max-width: $maxWidth !important;
+		max-width: $contentStop !important;
 	}
 	//allow map to override layout margins on mobile
 	.field-location{
