--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/pullquote/_pullquote.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/pullquote/_pullquote.scss
@@ -2,7 +2,7 @@
 	PULLQUOTE WIDGET
 ======================= */
 .paragraph--type--pullquote{
-	max-width: $maxWidthText;
+	max-width: $textMax;
 	@include auto;
 	.widget-title{
 		@include spacer(1.5);
