--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/slideshow/_slideshow.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/slideshow/_slideshow.scss
@@ -67,7 +67,7 @@
 
 .paragraph--type--slideshow{
 	.wrapper{
-		max-width: $maxWidth !important;
+		max-width: $contentStop !important;
 	}
 	
 	//slider container overrides layout padding on mobile
