--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/text/_text.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/text/_text.scss
@@ -3,7 +3,7 @@
 ================= */
 
 .paragraph--type--text{
-	max-width: $maxWidthText;
+	max-width: $textMax;
 	@include auto;
 }//end links-files widget
 
