--- a/web/themes/oc_patterns/components/_patterns/03-organisms/03-site/02-site-footer/_site-footer.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/03-site/02-site-footer/_site-footer.scss
@@ -17,7 +17,7 @@ footer {
 		//limit footer content to max-width and set flex parenting
 		& > div{
 			position: relative;
-			max-width: $maxWidth;
+			max-width: $contentStop;
 			@include auto;
 			@include safeFlex(row,wrap,null,null);
 		}
