--- a/web/themes/oc_patterns/components/_patterns/04-pages/_pages.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/_pages.scss
@@ -14,4 +14,4 @@ html > body:not(.is-front):not(.path-node):not(.node-type-page){
 		margin-bottom: 2em;
 	}
 
-}//end unpanelized pages
+}//system pages
