--- a/web/themes/oc_patterns/components/_patterns/04-pages/nodes/support-book/_support-book.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/nodes/support-book/_support-book.scss
@@ -29,7 +29,7 @@
 			bottom: 0;
 			text-align: center;
 			& > div{
-				max-width: $maxWidthText + 40px;
+				max-width: $textMax + 40px;
 				border: 1px solid $borderRule;
 				padding: 40px 30px;
 				@include auto;
