--- a/web/themes/oc_patterns/components/_patterns/00-base/global/02-grid/grid.twig
+++ b/web/themes/oc_patterns/components/_patterns/00-base/global/02-grid/grid.twig
@@ -13,7 +13,7 @@
 	<li><strong>$tab:</strong> 760px</li>
 	<li><strong>$desk:</strong> 900px</li>
 	<li><strong>$max-width:</strong> 1200px</li>
-	<li><strong>$maxWidthText:</strong> 800px</li>
+	<li><strong>$textMax:</strong> 800px</li>
 	<li><strong>$onlyTab:</strong> 760–899px</li>
 	<li><strong>$mobileMenu:</strong> < 980px</li>
 	<li><strong>$deskMenu:</strong> >= 980px</li>
