--- a/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/header-search-block/_search-block.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/header-search-block/_search-block.scss
@@ -119,7 +119,7 @@
 		top: 0;
 		left: 0;
 		width: 100%;
-		@include maxWidth{
+		@include contentStop{
 			@include calc(left, "-50vw + 620px");
 			width: 100vw;
 		}
