--- a/web/themes/oc_patterns/components/_patterns/02-molecules/menus/01-breadcrumbs/_breadcrumbs.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/menus/01-breadcrumbs/_breadcrumbs.scss
@@ -3,7 +3,7 @@
 ------------------- */
 
 .breadcrumb{
-	max-width: $maxWidth;
+	max-width: $contentStop;
 	@include auto;
 	padding-left: 20px;
 	padding-right: 20px;
