--- a/web/themes/oc_patterns/components/_patterns/04-pages/layouts/01-kermit/_kermit.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/layouts/01-kermit/_kermit.scss
@@ -9,7 +9,7 @@
 	.main{
 		width: 100%;
 		padding: 2em 20px 0;
-		max-width: $maxWidth;
+		max-width: $contentStop;
 		@include auto;
 	}
 	.widgets{
