--- a/web/themes/oc_patterns/components/_patterns/04-pages/layouts/_layouts.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/layouts/_layouts.scss
@@ -7,7 +7,7 @@
 	.block-entity-fieldnodetitle{
 		margin-top: 1em;
 		h1{
-			max-width: $maxWidth;
+			max-width: $contentStop;
 			padding-left: 20px;
 			padding-right: 20px;
 			@include auto;
