--- a/web/themes/oc_patterns/components/_patterns/05-miscellaneous/miscellaneous/_messaging.scss
+++ b/web/themes/oc_patterns/components/_patterns/05-miscellaneous/miscellaneous/_messaging.scss
@@ -29,7 +29,7 @@
 	background-position: 8px 8px; /* LTR */
 	background-repeat: no-repeat;
 	border: 1px solid #be7;
-	max-width: $maxWidth;
+	max-width: $contentStop;
 }
 
 .messages--status {
