--- a/web/themes/oc_patterns/components/_patterns/04-pages/nodes/support-book/_support-book.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/nodes/support-book/_support-book.scss
@@ -2,19 +2,6 @@
    SUPPORT BOOK NODE
 ===================== */
 .node-type-support-book{
-	.block-region-top{
-		margin-bottom: 2em;
-	}
-
-	.block-region-main{
-		@include mainContentSide;
-	}
-
-	.block-region-sidebar{
-		@include tab{
-			margin-top: .5em;
-		}
-	}
 
 	//restricted access message
 	&:not(.logged-in){
@@ -39,7 +26,7 @@
 				@include translate(-50%,-50%);
 			}
 		}
-	}
+	}//end restricted access
 
 }//end support book
 
