Initial section layout theming, fix section title/intro twig

--- a/web/themes/oc_patterns/components/_patterns/01-atoms/08-media/_media.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/08-media/_media.scss
@@ -8,6 +8,10 @@ img{
 	display: block;
 }
 
+.field-media-image + figcaption{
+	margin-top: .5em;
+}
+
 //constrain images with smaller sizes (commonly embedded)
 .view-modemediasmall,.view-mode-small{
 	width: 300px;
