--- a/web/themes/oc_patterns/components/_patterns/04-pages/nodes/_node.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/nodes/_node.scss
@@ -2,6 +2,26 @@
    NODES GLOBAL
 =================== */
 
+/* GLOBAL SECTIONS
+-------------------- */
+.node-section{
+	position: relative;
+}
+
+@mixin sectionLimit{
+	max-width: $contentStop;
+	@include auto;
+}//end section limit
+
+
+/* BODY
+-------------- */
+.node-content .block-body{
+	max-width: $textMax;
+	@include auto;
+	@include spacer(2);
+}
+
 
 
 /* unpub NODES
