--- a/web/themes/oc_patterns/templates/zzz-custom/widgets/00-base/field--paragraph--field-section-title.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/widgets/00-base/field--paragraph--field-section-title.html.twig
@@ -36,7 +36,7 @@
  * @ingroup themeable
  */
 #}
-<h2 class="widget-title">{{ element[0]['#context']['value'] }}</h2>
+<h2 class="section-title">{{ element[0]['#context']['value'] }}</h2>
 
 
 
