--- a/web/themes/oc_patterns/components/_patterns/04-pages/nodes/blog-post/_blog-post.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/nodes/blog-post/_blog-post.scss
@@ -1,118 +1,37 @@
 /* ====================
    BLOG NODE
 ===================== */
-.node--type-blog{
+.node-blog.node-content{
 
-	position: relative;
-
-	//banner
-	.block-entity-fieldnodefield-banner{
-		img{
-			display: block;
-			width: 100%;
+	//title author date
+	.block-field.block-title{
+		@include centerTitle;
+		h1{
+			@include spacer(.25);
 		}
-		@include tab{
-			.field-banner{
-				position: relative;
-				@include overlay;
-			}
-		}
-	}
-
-	//breadcrumbs
-	.block-system-breadcrumb-block ol{
-		@include tab{
-			position: relative;
-			z-index: 3;
-			max-width: 60%;
-		}
-	}
-
-	//title, date, author
-	.block-entity-fieldnodetitle{
-		//date and author
 		.metatext{
 			@include textDate;
 			padding: 0 20px;
 			margin-bottom: 1.5em;
 		}
-		// move on top of banner at tablet
-		@include tab{
-			margin-top: 0;
-			position: absolute;
-			top: 45%;
-			left: 0;
-			width: 100%;
-			@include translateY(-50%);
-			z-index: 10;
-			color: $white;
-			text-align: center;
-			h1{
-				margin-bottom: .25em;
-			}
-			.metatext{
-				@include opacity(1);
-			}
-		}
-	}
+	}//end title block
 	
 	//add to any block positioning
-	.block-addtoany-block{
+	.block-addtoany_block{
 		padding: 0 20px;
-		@include tab{
-			position: absolute;
-			z-index: 2;
-			bottom: 11px;
-			right: 0;
-			width: 100%;
-			text-align: right;
-			& > span{
-				display: block;
-				max-width: $contentStop;
-				@include auto;
-			}
-		}
+		text-align: right;
+		max-width: $contentStop;
+		margin-top: -3px;
+		@include auto;
+		@include spacer(2);
 	}
 
-
-
-	//author
-	.block-entity-fieldnodefield-author{
-		margin-bottom: 2em;
-		max-width: $textMax;
-		@include auto;
-		.profile-teaser{
-			.field-profile-image{
-				img{
-					border-radius: 50%;
-					max-width: 200px;
-					display: block;
-					@include auto;
-					margin-bottom: 1em;
-					@include imageHover;
-				}
-			}
-			.info{
-				a:hover,&:focus{
-					@include transAll(.3s);
-				}
-			}
-			@include smallTab{
-				@include safeFlex(row,wrap,null,null);
-				.field-profile-image{
-					@include safeFlexSize(0,0,200px);
-				}
-				.info{
-					padding-left: 30px;
-				}
-			}
-		}
-	}//end author
-
 	//tags
-	.block-entity-fieldnodefield-tags{
+	.block-field-tags{
 		max-width: $textMax;
 		@include auto;
+		@include spacer(.5);
+		font-size: 16px;
 		.label{
 			font-weight: $heavy;
 			margin-right: .5em;
