--- a/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/footer-menu/_footer-menu.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/footer-menu/_footer-menu.scss
@@ -23,6 +23,7 @@
 			a{
 				font-size: 16px;
 				display: block;
+				color: $white;
 				&:hover,&:focus{
 					color: $transWhite;
 					@include transAll(.3s);
