--- a/web/themes/oc_patterns/components/_patterns/04-pages/nodes/_node.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/nodes/_node.scss
@@ -1,6 +1,13 @@
 /* ===============
    NODES GLOBAL
 =================== */
+@mixin centerTitle{
+	padding-left: 20px;
+	padding-right: 20px;
+	max-width: $contentStop;
+	text-align: center;
+	@include auto;
+}
 
 /* GLOBAL SECTIONS
 -------------------- */
@@ -13,6 +20,14 @@
 	@include auto;
 }//end section limit
 
+
+/* BANNER
+------------ */
+.field-banner{
+	img{
+		width: 100%;
+	}
+}
 
 /* BODY
 -------------- */
