--- a/web/themes/oc_patterns/components/_patterns/04-pages/nodes/event/_event.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/nodes/event/_event.scss
@@ -1,28 +1,43 @@
 /* =============
    EVENT NODE
-=================  */
-.node--type-event{
-
-	.field-banner{
-		img{
-			display: block;
-			width: 100%;
+================ */
+.node-event.node-content{
+	//image, title, event date
+	.node-section#section-2{
+		padding: 0 20px;
+		@include auto;
+		@include spacer(2);
+		.layout__region--content{
+			@include textContent;
+			@include safeFlex(row,wrap,center,null);
 		}
 	}
-
-	.block-entity-fieldnodefield-oc-date{
-		.field-oc-date{
-			margin-bottom: 1.5em;
+	.block-field-banner{
+		width: 350px;
+		@include spacer(1.5);
+	}
+	.block-field.block-title{
+		text-align: center;
+		@include tab{
+			text-align: left;
+			padding-left: 40px;
+			@include calc(width, "100% - 350px");
+		}
+		h1{
+			@include spacer(.25);
+		}
+		.metatext{
+			@include textDate;
 		}
 	}
-
-	.block-entity-fieldnodefield-event-pin-info{
-		margin-bottom: .5em;
-		font-weight: $heavy;
+	.block-field-event-location{
+		@include textContent;
+		@include spacer(2);
+		//hide long/lat title
+		.geolocation-google-map{
+			.location-title{
+				display: none;
+			}
+		}
 	}
-
-	.block-entity-fieldnodefield-event-location{
-		margin-bottom: 1.5em;
-	}
-	
-}//end event
+}//end news
