--- a/web/themes/oc_patterns/components/_patterns/04-pages/nodes/news/_news.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/nodes/news/_news.scss
@@ -1,18 +1,34 @@
 /* =============
    NEWS NODE
 ================ */
-.node--type-news{
+.node-news.node-content{
 
-	.field-banner{
-		img{
-			display: block;
-			width: 100%;
+	//image, title, post date
+	.node-section#section-2{
+		padding: 0 20px;
+		@include auto;
+		@include spacer(2);
+		.layout__region--content{
+			@include textContent;
+			@include safeFlex(row,wrap,center,null);
 		}
 	}
-
-	.block-entity-fieldnodecreated{
-		margin-bottom: 1.5em;
+	.block-field-banner{
+		width: 350px;
+		@include spacer(1.5);
 	}
-
-
+	.block-field.block-title{
+		text-align: center;
+		@include tab{
+			text-align: left;
+			padding-left: 40px;
+			@include calc(width, "100% - 350px");
+		}
+		h1{
+			@include spacer(.25);
+		}
+		.metatext{
+			@include textDate;
+		}
+	}
 }//end news
