--- a/web/themes/oc_patterns/components/_patterns/04-pages/nodes/profile/_profile.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/nodes/profile/_profile.scss
@@ -1,9 +1,60 @@
 /* =============
    PROFILE NODE
 ================== */
-.node--type-profiles{
+.node-profiles.node-content{
 
-	.block-entity-fieldnodetitle{
+	//image title position email phone
+	.node-section#section-2{
+		.layout__region--content{
+			@include spacer(1.5);
+			@include textContent;
+			@include tab{
+				@include clearFix;
+			}
+		}
+	}
+
+	.block-field-profile-image{
+		width: 250px;
+		@include spacer(1);
+		@include onlySmall{
+			@include auto;
+		}
+		@include tab{
+			float: left;
+		}
+	}//end profile-image
+
+	.block-field-email{
+		@include spacer(.5);
+		.has-main-image &{
+			@include tab{
+				margin-left: 250px;
+				padding-left: 40px;
+				@include calc(width, "100% - 250px");
+			}
+		}
+	}//end email
+
+	.block-field-phone{
+		@include spacer(.5);
+		.has-main-image &{
+			@include tab{
+				margin-left: 250px;
+				padding-left: 40px;
+				@include calc(width, "100% - 250px");
+			}
+		}
+	}//end phone
+
+	.block-field.block-title{
+		.has-main-image &{
+			@include tab{
+				margin-left: 250px;
+				padding-left: 40px;
+				@include calc(width, "100% - 250px");
+			}
+		}
 		h1{
 			margin-bottom: 10px;
 			font-size: 32px;
@@ -11,40 +62,23 @@
 				font-size: 48px;
 			}
 		}
-	}
-	.block-entity-fieldnodefield-position{
-		margin-bottom: 1.5em;
+	}//end title
+
+	.block-field-position{
+		@include spacer(.5);
+		.has-main-image &{
+			@include tab{
+				margin-left: 250px;
+				padding-left: 40px;
+				@include calc(width, "100% - 250px");
+			}
+		}
 		.field-position{
 			font-size: 21px;
 			@include tab{
 				font-size: 24px;
 			}
 		}
-	}
-
-	.block-entity-fieldnodebody{
-		@include onlySmall{
-			margin-bottom: 2em;
-		}
-	}
-
-	.block-entity-fieldnodefield-profile-image{
-		.field-profile-image{
-			.media-image{
-				@include auto;
-				max-width: 250px;
-			}
-			img{
-				border-radius: 50%;
-				margin-bottom: 1em;
-			}
-		}
-	}
-
-	.field-email,.field-phone{
-		a{
-			@include transAll(.3s);
-		}
-	}
+	}//end block field position
 
 }//end news
