--- a/web/themes/oc_patterns/templates/zzz-custom/blocks/menus/block--menu-block--page-menu.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/blocks/menus/block--menu-block--page-menu.html.twig
@@ -37,18 +37,20 @@
 {% if configuration.label %}
   {% set blockTitle = configuration.label|clean_class %}
 {% endif %}
-
-<nav role="navigation" aria-labelledby="{{ heading_id }}"{{ attributes|without('role', 'aria-labelledby').addClass(blockTitle,heading_id) }}>
+{{ attach_library('oc_patterns/page-menu') }}
+<nav role="navigation" aria-labelledby="{{ heading_id }}"{{ attributes|without('role', 'aria-labelledby').addClass(blockTitle,heading_id, 'page-menu') }}>
   {# Label. If not displayed, we still provide it for screen readers. #}
   {% if not configuration.label_display %}
     {% set title_attributes = title_attributes.addClass('visually-hidden') %}
   {% endif %}
   {{ title_prefix }}
-  <h2 class="block-title">{{ configuration.label }}</h2>
+  <h2 class="block-title"><a href="#" class="page-menu-toggle" aria-controls="page-menu-wrapper" aria-expanded="false"><i class="fa fa-bars" aria-hidden="true"></i></a>{{ configuration.label }}</h2>
   {{ title_suffix }}
 
   {# Menu. #}
   {% block content %}
-    {{ content }}
+    <div id="page-menu-wrapper" aria-hidden="true">
+      {{ content }}
+    </div>
   {% endblock %}
 </nav>
