--- a/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/footer-menu/_footer-menu.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/footer-menu/_footer-menu.scss
@@ -2,7 +2,7 @@
    FOOTER MENU
 ==================== */
 
-.footer-menu{
+#block-oc-patterns-footer{
 	width: 100%;
 	margin-bottom: 1.5em;
 	@include tab{
