--- a/web/themes/oc_patterns/components/_patterns/04-pages/_pages.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/_pages.scss
@@ -8,10 +8,23 @@ html > body:not(.is-front):not(.path-node):not(.node-type-page){
 			@include paddedContent;
 		}
 		@include auto;
-		padding: 2em 20px 3em;
+		padding: 0 20px 3em;
+	}
+	#block-oc-patterns-content{
+		padding-top: 2em;
 	}
 	.block-page-title-block{
 		margin-bottom: 2em;
 	}
 
 }//system pages
+
+
+/* FRONT
+-------------- */
+.is-front{
+	//end banner section
+	.node-section#section-2{
+		margin-top: 2em;
+	}//banner section
+}//end front
